--- a/reactchess/practice2.html
+++ b/reactchess/practice2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chess Game with TTS</title>
   <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
@@ -47,7 +48,7 @@
 <body>
   <div id="root"></div>
 
-  <script type="text/babel">
+  <script type="text/babel" data-presets="react,stage-3">
     const initialGameState = [
       ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
       ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
@@ -74,9 +75,12 @@
       'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
     };
 
-    function speak(text) {
-      const utterance = new SpeechSynthesisUtterance(text);
-      window.speechSynthesis.speak(utterance);
+    // Function to use the text-to-speech (TTS) feature
+    function speak(text, isTTSEnabled) {
+      if (isTTSEnabled) {
+        const utterance = new SpeechSynthesisUtterance(text);
+        window.speechSynthesis.speak(utterance);
+      }
     }
 
     function Game() {
@@ -86,7 +90,9 @@
       const [gameOver, setGameOver] = React.useState(false);
       const [inCheck, setInCheck] = React.useState(false);
       const [checkedKingPosition, setCheckedKingPosition] = React.useState(null);
+      const [isTTSEnabled, setIsTTSEnabled] = React.useState(true);  // State for TTS toggle
 
+      // Start or restart the game
       function startRestartGame() {
         setGame(initialGameState);
         setSelectedSquare(null);
@@ -94,36 +100,15 @@
         setGameOver(false);
         setInCheck(false);
         setCheckedKingPosition(null);
-        speak("Game started. White's turn.");
+        speak("Game started. White's turn.", isTTSEnabled);
       }
 
-      function isCheckmate(game, isWhiteTurn) {
-        for (let row = 0; row < 8; row++) {
-          for (let col = 0; col < 8; col++) {
-            const piece = game[row][col];
-            if (piece && isPlayerPiece(piece, isWhiteTurn)) {
-              for (let targetRow = 0; targetRow < 8; targetRow++) {
-                for (let targetCol = 0; targetCol < 8; targetCol++) {
-                  const newGame = game.map(row => row.slice());
-                  if (
-                    isValidMove(piece, row, col, targetRow, targetCol, newGame) &&
-                    (isOpponentPiece(piece, game[targetRow][targetCol]) || game[targetRow][targetCol] === '')
-                  ) {
-                    newGame[targetRow][targetCol] = piece;
-                    newGame[row][col] = '';
-                    const kingPos = findKing(newGame, isWhiteTurn ? 'K' : 'k');
-                    if (!isKingInCheck(newGame, kingPos, isWhiteTurn)) {
-                      return false; // Found a valid move, so not checkmate
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-        return true; // No valid moves left, so it's checkmate
+      // Toggle TTS on and off
+      function toggleTTS() {
+        setIsTTSEnabled(!isTTSEnabled);
       }
 
+      // Handle square click for moving pieces
       function handleClick(row, col) {
         if (gameOver) return;
 
@@ -138,9 +123,9 @@
             if (targetPiece === '' || isOpponentPiece(selectedPiece, targetPiece)) {
               const newGame = game.map(row => row.slice());
 
-              if (selectedPiece.toLowerCase() === 'k' && targetPiece.toLowerCase() === 'k') {
+              if (targetPiece.toLowerCase() === 'k') {
                 setGameOver(true);
-                speak(`Game Over! ${currentPlayer} wins by capturing the King.`);
+                speak(`Game Over! ${currentPlayer} wins by capturing the King.`, isTTSEnabled);
                 alert(`Game Over! ${currentPlayer} wins by capturing the King.`);
               }
 
@@ -151,18 +136,13 @@
                 setSelectedSquare(null);
                 setIsWhiteTurn(!isWhiteTurn);
 
+                // Check if the opponent's king is now in check
                 const opponentKingPos = findKing(newGame, isWhiteTurn ? 'k' : 'K');
                 if (isKingInCheck(newGame, opponentKingPos, !isWhiteTurn)) {
                   setInCheck(true);
                   setCheckedKingPosition(opponentKingPos);
-
-                  if (isCheckmate(newGame, !isWhiteTurn)) {
-                    setGameOver(true);
-                    speak(`Checkmate! ${currentPlayer} wins.`);
-                    alert(`Checkmate! ${currentPlayer} wins!`);
-                  } else {
-                    speak(`${currentPlayer} has placed the opponent's King in check.`);
-                  }
+                  speak(`${currentPlayer} has placed the opponent's King in check.`, isTTSEnabled);
+                  alert(`${currentPlayer} has placed the opponent's King in check!`);
                 } else {
                   setInCheck(false);
                   setCheckedKingPosition(null);
@@ -200,68 +180,85 @@
           case 'p':
             const direction = isWhiteTurn ? -1 : 1;
             const startRowForPawn = isWhiteTurn ? 6 : 1;
-            if (
-              (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') ||
-              (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[targetRow][targetCol] === '') ||
-              (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '' && isOpponentPiece(piece, newGame[targetRow][targetCol]))
-            ) return true;
+            if (colDiff === 0 && rowDiff === direction && newGame[targetRow][targetCol] === '') {
+              return true;
+            }
+            if (colDiff === 0 && rowDiff === 2 * direction && startRow === startRowForPawn && newGame[targetRow][targetCol] === '' && newGame[startRow + direction][startCol] === '') {
+              return true;
+            }
+            if (Math.abs(colDiff) === 1 && rowDiff === direction && newGame[targetRow][targetCol] !== '' && isOpponentPiece(piece, newGame[targetRow][targetCol])) {
+              return true;
+            }
             break;
           case 'r':
-            if (startRow === targetRow || startCol === targetCol) {
-              if (clearPath(startRow, startCol, targetRow, targetCol, newGame)) return true;
+            if (rowDiff === 0 || colDiff === 0) {
+              return isClearPath(startRow, startCol, targetRow, targetCol, newGame);
             }
             break;
           case 'n':
-            if (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1 || Math.abs(rowDiff) === 1 && Math.abs(colDiff) === 2) return true;
+            if (Math.abs(rowDiff) === 2 && Math.abs(colDiff) === 1 || Math.abs(rowDiff) === 1 && Math.abs(colDiff) === 2) {
+              return true;
+            }
             break;
           case 'b':
             if (Math.abs(rowDiff) === Math.abs(colDiff)) {
-              if (clearPath(startRow, startCol, targetRow, targetCol, newGame)) return true;
+              return isClearPath(startRow, startCol, targetRow, targetCol, newGame);
             }
             break;
           case 'q':
-            if (Math.abs(rowDiff) === Math.abs(colDiff) || startRow === targetRow || startCol === targetCol) {
-              if (clearPath(startRow, startCol, targetRow, targetCol, newGame)) return true;
+            if (rowDiff === 0 || colDiff === 0 || Math.abs(rowDiff) === Math.abs(colDiff)) {
+              return isClearPath(startRow, startCol, targetRow, targetCol, newGame);
             }
             break;
           case 'k':
-            if (Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1) return true;
+            if (Math.abs(rowDiff) <= 1 && Math.abs(colDiff) <= 1) {
+              return true;
+            }
             break;
+          default:
+            return false;
         }
         return false;
       }
 
-      function clearPath(startRow, startCol, targetRow, targetCol, newGame) {
-        const rowStep = Math.sign(targetRow - startRow);
-        const colStep = Math.sign(targetCol - startCol);
-        let row = startRow + rowStep;
-        let col = startCol + colStep;
-        while (row !== targetRow || col !== targetCol) {
-          if (newGame[row][col] !== '') return false;
-          row += rowStep;
-          col += colStep;
+      function isClearPath(startRow, startCol, targetRow, targetCol, newGame) {
+        const rowDiff = targetRow - startRow;
+        const colDiff = targetCol - startCol;
+        const rowStep = rowDiff === 0 ? 0 : rowDiff > 0 ? 1 : -1;
+        const colStep = colDiff === 0 ? 0 : colDiff > 0 ? 1 : -1;
+        let currentRow = startRow + rowStep;
+        let currentCol = startCol + colStep;
+
+        while (currentRow !== targetRow || currentCol !== targetCol) {
+          if (newGame[currentRow][currentCol] !== '') {
+            return false;
+          }
+          currentRow += rowStep;
+          currentCol += colStep;
         }
+
         return true;
       }
 
-      function findKing(game, kingSymbol) {
+      function findKing(newGame, king) {
         for (let row = 0; row < 8; row++) {
           for (let col = 0; col < 8; col++) {
-            if (game[row][col] === kingSymbol) return [row, col];
+            if (newGame[row][col] === king) {
+              return [row, col];
+            }
           }
         }
-        return null;
       }
 
-      function isKingInCheck(game, kingPosition, isWhiteTurn) {
-        if (!kingPosition) return false;
-        const [kingRow, kingCol] = kingPosition;
-
-        for (let row = 0; row < 8; row++) {
-          for (let col = 0; col < 8; col++) {
-            const piece = game[row][col];
-            if (piece && isOpponentPiece(piece, isWhiteTurn ? 'K' : 'k')) {
-              if (isValidMove(piece, row, col, kingRow, kingCol, game)) return true;
+      function isKingInCheck(newGame, kingPos, isWhite) {
+        const opponentPieces = isWhite ? ['r', 'n', 'b', 'q', 'k', 'p'] : ['R', 'N', 'B', 'Q', 'K', 'P'];
+        for (let i = 0; i < 8; i++) {
+          for (let j = 0; j < 8; j++) {
+            const piece = newGame[i][j];
+            if (opponentPieces.includes(piece.toLowerCase())) {
+              if (isValidMove(piece, i, j, kingPos[0], kingPos[1], newGame)) {
+                return true;
+              }
             }
           }
         }
@@ -270,65 +267,42 @@
 
       return (
         <div>
-          <div className="turn-info">
-            {gameOver ? "Game Over" : `${isWhiteTurn ? "White" : "Black"}'s Turn`}
-            {inCheck && !gameOver ? ` - ${isWhiteTurn ? "Black" : "White"} King in Check!` : ""}
-          </div>
+          <div className="turn-info">{gameOver ? "Game Over" : `${isWhiteTurn ? 'White' : 'Black'}'s turn`}</div>
           <div className="button-container">
             <button onClick={startRestartGame}>Start/Restart Game</button>
+            <button onClick={toggleTTS}>{isTTSEnabled ? "Disable TTS" : "Enable TTS"}</button>
           </div>
           <div className="board-container">
-            {game.map((row, rowIndex) => (
-              <div key={rowIndex} style={{ display: "flex" }}>
-                {row.map((piece, colIndex) => {
-                  const isWhiteSquare = (rowIndex + colIndex) % 2 === 0;
-                  const isKingInCheck =
-                    inCheck &&
-                    checkedKingPosition &&
-                    checkedKingPosition[0] === rowIndex &&
-                    checkedKingPosition[1] === colIndex;
-
-                  return (
-                    <div
-                      key={colIndex}
-                      onClick={() => handleClick(rowIndex, colIndex)}
-                      style={{
-                        width: 50,
-                        height: 50,
-                        backgroundColor: isKingInCheck
-                          ? "red"
-                          : isWhiteSquare
-                          ? "#f0d9b5"
-                          : "#b58863",
-                        display: "flex",
-                        justifyContent: "center",
-                        alignItems: "center",
-                        border: selectedSquare &&
-                          selectedSquare[0] === rowIndex &&
-                          selectedSquare[1] === colIndex
-                          ? "2px solid yellow"
-                          : "1px solid black",
-                        cursor: "pointer",
-                      }}
-                    >
-                      {piece && (
-                        <img
-                          src={pieceImages[piece]}
-                          alt={piece}
-                          style={{ width: "80%", height: "80%" }}
-                        />
-                      )}
-                    </div>
-                  );
-                })}
-              </div>
-            ))}
+            <table>
+              <tbody>
+                {game.map((row, rowIndex) => (
+                  <tr key={rowIndex}>
+                    {row.map((square, colIndex) => (
+                      <td
+                        key={colIndex}
+                        onClick={() => handleClick(rowIndex, colIndex)}
+                        style={{
+                          width: '50px',
+                          height: '50px',
+                          backgroundColor: (rowIndex + colIndex) % 2 === 0 ? '#f0d9b5' : '#b58863',
+                          cursor: 'pointer',
+                          textAlign: 'center',
+                          verticalAlign: 'middle'
+                        }}
+                      >
+                        {square && <img src={pieceImages[square]} alt={square} style={{ width: '40px', height: '40px' }} />}
+                      </td>
+                    ))}
+                  </tr>
+                ))}
+              </tbody>
+            </table>
           </div>
         </div>
       );
     }
 
-    ReactDOM.createRoot(document.getElementById('root')).render(<Game />);
+    ReactDOM.render(<Game />, document.getElementById('root'));
   </script>
 </body>
 </html>
