--- a/fabricjschess/practice.html
+++ b/fabricjschess/practice.html
@@ -1,1 +1,155 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fabric.js Chess Game</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.4.0/fabric.min.js"></script>
+  <style>
+    body {
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: linear-gradient(45deg, #283048, #859398);
+    }
+
+    canvas {
+      border: 2px solid #000;
+    }
+
+    .controls {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .controls button {
+      margin: 0 5px;
+      padding: 10px 15px;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <div>
+    <canvas id="chessBoard" width="480" height="480"></canvas>
+    <div class="controls">
+      <button id="restartGame">Start/Restart Game</button>
+      <button id="toggleTTS">Turn off TTS</button>
+    </div>
+  </div>
+
+  <script>
+    const initialGameState = [
+      ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
+      ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['', '', '', '', '', '', '', ''],
+      ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
+      ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
+    ];
+
+    const pieceImages = {
+      'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
+      'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
+      'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
+      'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
+      'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
+      'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
+      'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
+      'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
+      'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
+      'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
+      'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
+      'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
+    };
+
+    let isTTSOn = true;
+
+    // Text-to-Speech function
+    function speak(text) {
+      if (isTTSOn) {
+        const utterance = new SpeechSynthesisUtterance(text);
+        window.speechSynthesis.speak(utterance);
+      }
+    }
+
+    // Function to draw the chessboard
+    function drawBoard(canvas) {
+      const lightSquareColor = '#87CEEB'; // Light blue
+      const darkSquareColor = '#708090'; // Grey
+      const squareSize = 60;
+
+      for (let row = 0; row < 8; row++) {
+        for (let col = 0; col < 8; col++) {
+          const isLightSquare = (row + col) % 2 === 0;
+          const rect = new fabric.Rect({
+            left: col * squareSize,
+            top: row * squareSize,
+            width: squareSize,
+            height: squareSize,
+            fill: isLightSquare ? lightSquareColor : darkSquareColor,
+            selectable: false,
+          });
+          canvas.add(rect);
+        }
+      }
+    }
+
+    // Function to draw chess pieces
+    function drawPieces(canvas, game) {
+      const squareSize = 60;
+
+      game.forEach((row, rowIndex) => {
+        row.forEach((piece, colIndex) => {
+          if (piece) {
+            fabric.Image.fromURL(pieceImages[piece], (img) => {
+              img.set({
+                left: colIndex * squareSize + squareSize / 4,
+                top: rowIndex * squareSize + squareSize / 4,
+                scaleX: 0.5,
+                scaleY: 0.5,
+                selectable: false,
+              });
+              canvas.add(img);
+            });
+          }
+        });
+      });
+    }
+
+    // Function to reset the game
+    function resetGame(canvas, game) {
+      canvas.clear();
+      drawBoard(canvas);
+      drawPieces(canvas, game);
+      speak("Game started. White's turn.");
+    }
+
+    // Main setup
+    const canvas = new fabric.Canvas('chessBoard', {
+      selection: false,
+    });
+
+    drawBoard(canvas);
+    drawPieces(canvas, initialGameState);
+
+    // Button controls
+    document.getElementById('restartGame').addEventListener('click', () => {
+      resetGame(canvas, initialGameState);
+    });
+
+    document.getElementById('toggleTTS').addEventListener('click', (e) => {
+      isTTSOn = !isTTSOn;
+      e.target.textContent = isTTSOn ? "Turn off TTS" : "Turn on TTS";
+    });
+  </script>
+</body>
+</html>
 
