--- a/fabricjschess/practice.html
+++ b/fabricjschess/practice.html
@@ -9,6 +9,7 @@
     body {
       margin: 0;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
@@ -152,4 +153,3 @@
   </script>
 </body>
 </html>
-
