--- a/fabricjschess/chess.html
+++ b/fabricjschess/chess.html
@@ -1,164 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chess Game with Fabric.js</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(45deg, #283048, #859398);
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      font-family: Arial, sans-serif;
-    }
+const canvas = new fabric.Canvas('chessCanvas');
 
-    .controls {
-      margin-bottom: 20px;
-      text-align: center;
-    }
+// Chessboard dimensions
+const tileSize = 100;
+const boardSize = 8;
 
-    canvas {
-      border: 2px solid #000;
-    }
+// Colors for chessboard tiles
+const lightColor = '#f0d9b5';
+const darkColor = '#b58863';
 
-    button {
-      margin: 5px;
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <div class="controls">
-    <button onclick="startRestartGame()">Start/Restart Game</button>
-    <button onclick="toggleTTS()">
-      <span id="tts-status">Turn off TTS</span>
-    </button>
-  </div>
-  <canvas id="chessboard" width="480" height="480"></canvas>
-
-  <script>
-    const canvas = new fabric.Canvas('chessboard');
-    const pieceImages = {
-      'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
-      'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
-      'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
-      'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
-      'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
-      'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
-      'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
-      'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
-      'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
-      'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
-      'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
-      'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
-    };
-
-    let game = [];
-    let isWhiteTurn = true;
-    let selectedPiece = null;
-    let isTTSOn = true;
-
-    // Helper to speak text
-    function speak(text) {
-      if (isTTSOn) {
-        const utterance = new SpeechSynthesisUtterance(text);
-        window.speechSynthesis.speak(utterance);
-      }
-    }
-
-    function drawBoard() {
-      const tileSize = 60;
-      for (let i = 0; i < 8; i++) {
-        for (let j = 0; j < 8; j++) {
-          const isLight = (i + j) % 2 === 0;
-          const rect = new fabric.Rect({
-            left: j * tileSize,
-            top: i * tileSize,
-            width: tileSize,
-            height: tileSize,
-            fill: isLight ? '#f0d9b5' : '#b58863',
-            selectable: false
-          });
-          canvas.add(rect);
-        }
-      }
-    }
-
-    function drawPieces() {
-      const tileSize = 60;
-      canvas.getObjects('image').forEach(obj => canvas.remove(obj)); // Clear old pieces
-      for (let i = 0; i < 8; i++) {
-        for (let j = 0; j < 8; j++) {
-          const piece = game[i][j];
-          if (piece) {
-            fabric.Image.fromURL(pieceImages[piece], (img) => {
-              img.set({
-                left: j * tileSize,
-                top: i * tileSize,
-                scaleX: tileSize / img.width,
-                scaleY: tileSize / img.height,
-                hasControls: false,
-                hasBorders: false,
-                selectable: false,
-                data: { row: i, col: j, piece }
-              });
-              canvas.add(img);
-            });
-          }
-        }
-      }
-    }
-
-    function startRestartGame() {
-      game = [
-        ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
-        ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
-        ['', '', '', '', '', '', '', ''],
-        ['', '', '', '', '', '', '', ''],
-        ['', '', '', '', '', '', '', ''],
-        ['', '', '', '', '', '', '', ''],
-        ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
-        ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
-      ];
-      isWhiteTurn = true;
-      selectedPiece = null;
-      canvas.clear();
-      drawBoard();
-      drawPieces();
-      speak("Game started. White's turn.");
-    }
-
-    function toggleTTS() {
-      isTTSOn = !isTTSOn;
-      document.getElementById('tts-status').textContent = isTTSOn ? "Turn off TTS" : "Turn on TTS";
-    }
-
-    canvas.on('mouse:down', (event) => {
-      const pointer = canvas.getPointer(event.e);
-      const row = Math.floor(pointer.y / 60);
-      const col = Math.floor(pointer.x / 60);
-      const piece = game[row][col];
-
-      if (selectedPiece) {
-        // Move logic here
-        selectedPiece = null; // Deselect after attempting a move
-      } else if (piece) {
-        selectedPiece = { row, col, piece };
-      }
+// Draw the chessboard
+for (let row = 0; row < boardSize; row++) {
+  for (let col = 0; col < boardSize; col++) {
+    const color = (row + col) % 2 === 0 ? lightColor : darkColor;
+    const rect = new fabric.Rect({
+      left: col * tileSize,
+      top: row * tileSize,
+      width: tileSize,
+      height: tileSize,
+      fill: color,
+      selectable: false,
     });
+    canvas.add(rect);
+  }
+}
 
-    startRestartGame(); // Initialize the game
-  </script>
-</body>
-</html>
+// Create a chess piece (example: white pawn)
+const pieceSize = tileSize * 0.8;
+const whitePawn = new fabric.Circle({
+  left: tileSize * 3.1,
+  top: tileSize * 6.1,
+  radius: pieceSize / 2,
+  fill: 'white',
+  originX: 'center',
+  originY: 'center',
+  hasControls: false,
+  hasBorders: false,
+});
 
+canvas.add(whitePawn);
+
+// Add drag-and-drop functionality
+canvas.on('object:moving', (e) => {
+  const obj = e.target;
+
+  // Snap to grid
+  obj.left = Math.round(obj.left / tileSize) * tileSize + tileSize * 0.1;
+  obj.top = Math.round(obj.top / tileSize) * tileSize + tileSize * 0.1;
+});
+
+// Add logic for piece movement and capturing here...
