--- a/fabricjschess/chess.html
+++ b/fabricjschess/chess.html
@@ -3,31 +3,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fabric.js Chess Game</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.4.0/fabric.min.js"></script>
+  <title>Chess Game with Fabric.js</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.2.4/fabric.min.js"></script>
   <style>
     body {
       margin: 0;
+      padding: 0;
+      background: linear-gradient(45deg, #283048, #859398);
+      height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      background: linear-gradient(45deg, #283048, #859398);
+      font-family: Arial, sans-serif;
     }
-
+    .controls {
+      margin-bottom: 20px;
+      text-align: center;
+    }
     canvas {
       border: 2px solid #000;
     }
-
-    .controls {
-      margin-top: 20px;
-      text-align: center;
-    }
-
-    .controls button {
-      margin: 0 5px;
-      padding: 10px 15px;
+    button {
+      margin: 5px;
+      padding: 10px 20px;
       font-size: 16px;
       border: none;
       border-radius: 5px;
@@ -36,26 +35,15 @@
   </style>
 </head>
 <body>
-  <div>
-    <canvas id="chessBoard" width="480" height="480"></canvas>
-    <div class="controls">
-      <button id="restartGame">Start/Restart Game</button>
-      <button id="toggleTTS">Turn off TTS</button>
-    </div>
+  <div class="controls">
+    <button onclick="startRestartGame()">Start/Restart Game</button>
+    <button onclick="toggleTTS()">
+      <span id="tts-status">Turn off TTS</span>
+    </button>
   </div>
-
+  <canvas id="chessboard" width="480" height="480"></canvas>
   <script>
-    const initialGameState = [
-      ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
-      ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['', '', '', '', '', '', '', ''],
-      ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
-      ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
-    ];
-
+    const canvas = new fabric.Canvas('chessboard');
     const pieceImages = {
       'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
       'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
@@ -70,69 +58,93 @@
       'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
       'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
     };
-
-    const squareSize = 60;
-    const canvas = new fabric.Canvas('chessBoard', {
-      selection: false,
-    });
-
-    // Draw chessboard
+    let game = [];
+    let isWhiteTurn = true;
+    let selectedPiece = null;
+    let isTTSOn = true;
+    // Helper to speak text
+    function speak(text) {
+      if (isTTSOn) {
+        const utterance = new SpeechSynthesisUtterance(text);
+        window.speechSynthesis.speak(utterance);
+      }
+    }
     function drawBoard() {
-      const lightSquareColor = '#87CEEB';
-      const darkSquareColor = '#708090';
-
-      for (let row = 0; row < 8; row++) {
-        for (let col = 0; col < 8; col++) {
-          const isLightSquare = (row + col) % 2 === 0;
-          const square = new fabric.Rect({
-            left: col * squareSize,
-            top: row * squareSize,
-            width: squareSize,
-            height: squareSize,
-            fill: isLightSquare ? lightSquareColor : darkSquareColor,
-            selectable: false,
-            hoverCursor: 'default',
+      const tileSize = 60;
+      for (let i = 0; i < 8; i++) {
+        for (let j = 0; j < 8; j++) {
+          const isLight = (i + j) % 2 === 0;
+          const rect = new fabric.Rect({
+            left: j * tileSize,
+            top: i * tileSize,
+            width: tileSize,
+            height: tileSize,
+            fill: isLight ? '#f0d9b5' : '#b58863',
+            selectable: false
           });
-          canvas.add(square);
+          canvas.add(rect);
         }
       }
     }
-
-    // Draw pieces
     function drawPieces() {
-      initialGameState.forEach((row, rowIndex) => {
-        row.forEach((piece, colIndex) => {
+      const tileSize = 60;
+      canvas.getObjects('image').forEach(obj => canvas.remove(obj)); // Clear old pieces
+      for (let i = 0; i < 8; i++) {
+        for (let j = 0; j < 8; j++) {
+          const piece = game[i][j];
           if (piece) {
             fabric.Image.fromURL(pieceImages[piece], (img) => {
               img.set({
-                left: colIndex * squareSize + squareSize / 2,
-                top: rowIndex * squareSize + squareSize / 2,
-                originX: 'center',
-                originY: 'center',
-                scaleX: 0.5,
-                scaleY: 0.5,
-                selectable: true,
+                left: j * tileSize,
+                top: i * tileSize,
+                scaleX: tileSize / img.width,
+                scaleY: tileSize / img.height,
+                hasControls: false,
+                hasBorders: false,
+                selectable: false,
+                data: { row: i, col: j, piece }
               });
               canvas.add(img);
             });
           }
-        });
-      });
+        }
+      }
     }
-
-    // Reset game
-    function resetGame() {
+    function startRestartGame() {
+      game = [
+        ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
+        ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
+        ['', '', '', '', '', '', '', ''],
+        ['', '', '', '', '', '', '', ''],
+        ['', '', '', '', '', '', '', ''],
+        ['', '', '', '', '', '', '', ''],
+        ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
+        ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
+      ];
+      isWhiteTurn = true;
+      selectedPiece = null;
       canvas.clear();
       drawBoard();
       drawPieces();
+      speak("Game started. White's turn.");
     }
-
-    // Initial setup
-    drawBoard();
-    drawPieces();
-
-    // Restart button
-    document.getElementById('restartGame').addEventListener('click', resetGame);
+    function toggleTTS() {
+      isTTSOn = !isTTSOn;
+      document.getElementById('tts-status').textContent = isTTSOn ? "Turn off TTS" : "Turn on TTS";
+    }
+    canvas.on('mouse:down', (event) => {
+      const pointer = canvas.getPointer(event.e);
+      const row = Math.floor(pointer.y / 60);
+      const col = Math.floor(pointer.x / 60);
+      const piece = game[row][col];
+      if (selectedPiece) {
+        // Move logic here
+        selectedPiece = null; // Deselect after attempting a move
+      } else if (piece) {
+        selectedPiece = { row, col, piece };
+      }
+    });
+    startRestartGame(); // Initialize the game
   </script>
 </body>
 </html>
